--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: An implemetation of all R related resources for NordicScir at
     even artwork needed for producing R-dependent reports
 Depends:
     R (>= 3.0.2),
-    rapbase
+    rapbase (>= 1.0.0)
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
