Starten på en Shinyapp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,8 @@ export(NSPreprosesser)
 export(NSRegDataSQL)
 export(NSUtvalg)
 export(NSVarTilrettelegg)
+export(lagTabavFig)
+export(tabAntOpphPasSh5Aar)
+export(tabAntOpphSh5Aar)
+export(tabAntOpphShMnd)
+export(tabBelegg)
