teste nedlasting av mndRapp

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@ inst/*.gz
 inst/Fig*
 inst/NSsamleDok.pdf
 inst/NSsamleDokLand.pdf
-<<<<<<< HEAD
-=======
+*.pdf
 *.png
->>>>>>> rel
-nordicscir.Rproj
+*.tex
