--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,8 @@ export(NSVarTilrettelegg)
 export(SorterOgNavngiTidsEnhet)
 export(delTekst)
 export(finnRegData)
-export(lagTabavFig)
+export(lagTabavFigAndeler)
+export(lagTabavFigGjsnGrVar)
 export(lageTulleData)
 export(tabAntOpphPasSh5Aar)
 export(tabAntOpphSh5Aar)
