Funksjonalitet på plass. Mer arb. på tabeller.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(NSRegDataSQL)
 export(NSUtvalg)
 export(NSVarTilrettelegg)
 export(SorterOgNavngiTidsEnhet)
+export(TilLogiskeVar)
 export(delTekst)
 export(finnRegData)
 export(lagTabavFigAndeler)
