--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: nordicscir
 Title: R-pakke for å generere resultater fra NordicScir
-Version: 1.1.0
-Date: 2017-01-19
+Version: 1.3.1
+Date: 2018-11-01
 Authors: Authors@R: c(
   person("Olsen", "Lena Ringstad", email = "Lena.Ringstad.Olsen@unn.no",
   role = c("cre", "aut")),
@@ -13,7 +13,7 @@ Description: An implemetation of all R related resources for NordicScir at
     even artwork needed for producing R-dependent reports
 License: GPL-2
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 Depends:
     R (>= 3.0.2),
     rapbase (>= 1.0.0)
