--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Depends:
     rapbase (>= 1.0.0)
 Suggests:
     knitr,
+    lubridate,
+    kable,
     xtable
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
