--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ LazyData: false
 Depends:
     R (>= 3.5.0),
     rapbase (>= 1.0.0)
+Remotes: 
+      Rapporteket/rapbase
 Suggests:
     knitr,
     lubridate,
