Oppdatert app med flere tabeller

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(SorterOgNavngiTidsEnhet)
 export(TilLogiskeVar)
 export(delTekst)
 export(finnRegData)
+export(lagTabNevrKlass)
 export(lagTabavFigAndeler)
 export(lagTabavFigGjsnGrVar)
 export(lageTulleData)
@@ -20,4 +21,5 @@ export(tabAntOpphSh5Aar)
 export(tabAntOpphShMnd)
 export(tabAntSkjema)
 export(tabBelegg)
+export(tabLiggetider)
 export(tabSkjemaTilknyttetH)
