Ny, foreløbig versjon av app med kontrollskjema

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(KobleMedHoved)
 export(NSFigAndelStabel)
 export(NSFigAndeler)
 export(NSFigGjsnGrVar)
+export(NSFigKvalInd)
 export(NSPreprosesser)
 export(NSRegDataSQL)
 export(NSUtvalg)
@@ -22,4 +23,5 @@ export(tabAntOpphShMnd)
 export(tabAntSkjema)
 export(tabBelegg)
 export(tabLiggetider)
+export(tabSkjemaTilknyttet)
 export(tabSkjemaTilknyttetH)
