--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: nordicscir
 Type: Package
 Title: R-pakke for å generere resultater fra NordicScir
-Version: 1.3.1
+Version: 1.9
 Author: Lena Ringstad Olsen
 Maintainer: Lena Ringstad Olen <lena.olsen@skde.no>
 Description: An implemetation of all R related resources for NordicScir at
@@ -14,7 +14,8 @@ Depends:
     R (>= 3.5.0),
     rapbase (>= 1.0.0)
 Remotes: 
-      Rapporteket/rapbase
+      Rapporteket/rapbase@rel,
+      Rapporteket/rapFigurer
 Suggests:
     knitr,
     lubridate,
