--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,17 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: false
 Depends:
-    R (>= 3.5.0),
-    rapbase (>= 1.0.0)
+    R (>= 3.5.0)
+Imports:
+    kableExtra,
+    lubridate,
+    rapbase,
+    rapFigurer,
+    shiny,
+    shinyjs
 Remotes: 
-      Rapporteket/rapbase@rel,
-      Rapporteket/rapFigurer
+    Rapporteket/rapbase@rel,
+    Rapporteket/rapFigurer
 Suggests:
     knitr,
     lubridate,
