Ny figurtype. Foreløpig versjon av app klar for registeret.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(KobleMedHoved)
 export(NSFigAndelStabel)
 export(NSFigAndeler)
+export(NSFigAndelerSh)
 export(NSFigGjsnGrVar)
 export(NSFigKvalInd)
 export(NSPreprosesser)
 export(NSRegDataSQL)
+export(NSRegDataSQL_Jasper)
 export(NSUtvalg)
 export(NSVarTilrettelegg)
 export(SorterOgNavngiTidsEnhet)
