--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(delTekst)
 export(finnRegData)
 export(lagTabNevrKlass)
 export(lagTabavFigAndeler)
+export(lagTabavFigAndelerSh)
 export(lagTabavFigGjsnGrVar)
 export(lageTulleData)
 export(tabAntOpphPasSh5Aar)
