--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(NSUtvalg)
 export(NSVarTilrettelegg)
 export(SorterOgNavngiTidsEnhet)
 export(TilLogiskeVar)
+export(abonnement)
 export(delTekst)
 export(finnRegData)
 export(lagTabNevrKlass)
