kStartet Klargjøring av NSFigGjsnTid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(NSFigAndelStabel)
 export(NSFigAndeler)
 export(NSFigAndelerSh)
 export(NSFigGjsnGrVar)
+export(NSFigGjsnTid)
 export(NSFigKvalInd)
 export(NSPreprosesser)
 export(NSRegDataSQL)
