--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports:
     shinyjs,
     xtable
 Remotes: 
-    Rapporteket/rapbase,
+    Rapporteket/rapbase@*release,
     Rapporteket/rapFigurer,
     Rapporteket/raplog,
 Suggests:
