--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,17 @@ Package: nordicscir
 Type: Package
 Title: R-pakke for å generere resultater fra NordicScir
 Version: 2.4.0.9000
+Authors@R: c(
+     person(given = "Lena Ringstad",
+           family = "Olsen",
+           role = c("aut", "cre"),
+           email = "lena.olsen@skde.no"),
+    person(given = "Are",
+           family = "Edvardsen",
+           role = c("aut", "cre"),
+           email = "biorakel@gmail.com",
+           comment = c(ORCID = "0000-0002-5210-3656"))
+    )
 Author: Lena Ringstad Olsen
 Maintainer: Lena Ringstad Olen <lena.olsen@skde.no>
 Description: An implemetation of all R related resources for NordicScir at
