add unit testing and apply for new funs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,5 +39,7 @@ Remotes:
     Rapporteket/rapFigurer,
     Rapporteket/raplog,
 Suggests:
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
+Config/testthat/edition: 3
