--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,8 +1,8 @@
 on:
   push:
-    branches: [ r-metrics ]
+    branches: [ master ]
   pull_request:
-    branches: [ r-metrics ]
+    branches: [ master ]
 
 name: test-coverage
 
