veien mot to apper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,12 +25,14 @@ export(delTekst)
 export(finnRegData)
 export(getFakeData)
 export(getRealData)
+export(kjor_NSapper)
 export(lagTabNevrKlass)
 export(lagTabavFigAndeler)
 export(lagTabavFigAndelerSh)
 export(lagTabavFigGjsnGrVar)
 export(lageTulleData)
 export(processData)
+export(server_norscir)
 export(tabAntOpphPasSh5Aar)
 export(tabAntOpphSh5Aar)
 export(tabAntOpphShMnd)
@@ -38,6 +40,7 @@ export(tabAntSkjema)
 export(tabBelegg)
 export(tabLiggetider)
 export(tabSkjemaTilknyttet)
+export(ui_norscir)
 importFrom(lubridate,"%m-%")
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
