tilrettelagt for to apper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(lagTabavFigAndelerSh)
 export(lagTabavFigGjsnGrVar)
 export(lageTulleData)
 export(processData)
+export(server_nordicscir)
 export(server_norscir)
 export(tabAntOpphPasSh5Aar)
 export(tabAntOpphSh5Aar)
@@ -40,6 +41,7 @@ export(tabAntSkjema)
 export(tabBelegg)
 export(tabLiggetider)
 export(tabSkjemaTilknyttet)
+export(ui_nordicscir)
 export(ui_norscir)
 importFrom(lubridate,"%m-%")
 importFrom(magrittr,"%$%")
