--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(lagTabavFigAndelerSh)
 export(lagTabavFigGjsnGrVar)
 export(lageTulleData)
 export(processData)
+export(run_app)
 export(tabAntOpphPasSh5Aar)
 export(tabAntOpphSh5Aar)
 export(tabAntOpphShMnd)
