--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,7 @@ export(lagTabavFigAndeler)
 export(lagTabavFigAndelerSh)
 export(lagTabavFigGjsnGrVar)
 export(lageTulleData)
-export(processData)
+export(processAllData)
 export(server_nordicscir)
 export(server_norscir)
 export(tabAntOpphPasSh5Aar)
