Kanskje fungerende med to apper...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,29 @@
 version: '3.3'
 
 services:
-  db:
-    image: mysql:5.7
-    command: --innodb-log-file-size=500M --innodb_strict_mode=0
-    restart: "no"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
+   db:
+     image: mysql:5.7
+     command: --innodb-log-file-size=500M --innodb_strict_mode=0
+     restart: "no"
+     environment:
+       MYSQL_ROOT_PASSWORD: root
+     volumes:
+       - D:/db:/var/lib/mysql
 
   dev:
     depends_on:
       - db
     image: rapporteket/nordicscir-dev:nightly
-    volumes:
-      - ~/.ssh:/home/rstudio/.ssh
-      - ~/.gitconfig:/home/rstudio/.gitconfig
+      volumes:
+       - C:\Users\Lena Ringstad Olsen\.ssh:/home/rstudio/speiler_.ssh
+       - ~/.gitconfig:/home/rstudio/.gitconfig
+       - D:/mydata:/home/rstudio/mydata
+       - C:/ResultattjenesteGIT/korona:/home/rstudio/korona
+       - C:/ResultattjenesteGIT/rygg:/home/rstudio/rygg
+       - C:/ResultattjenesteGIT/nordicscir:/home/rstudio/nordicscir
+       - C:/ResultattjenesteGIT/intensiv:/home/rstudio/intensiv
+       - C:/ResultattjenesteGIT/intensivberedskap:/home/rstudio/intensivberedskap
+
     ports:
       - "8787:8787"
       - "3838:3838"
