Tilpasset ford.fig.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(NSFigKvalInd)
 export(NSPreprosesser)
 export(NSRegDataSQL)
 export(NSUtvalg)
+export(NSUtvalgEnh)
 export(NSVarTilrettelegg)
 export(SorterOgNavngiTidsEnhet)
 export(TilLogiskeVar)
