Lagt til prepost-figur, dvs. sml hovedskjema og kontroll

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(NSFigAndelerSh)
 export(NSFigGjsnGrVar)
 export(NSFigGjsnTid)
 export(NSFigKvalInd)
+export(NSFigPrePost)
 export(NSPreprosesser)
 export(NSRegDataSQL)
 export(NSUtvalg)
@@ -33,7 +34,6 @@ export(lagTabavFigGjsnGrVar)
 export(lageTulleData)
 export(processAllData)
 export(server_nordicscir)
-export(server_norscir)
 export(tabAntOpphPasSh5Aar)
 export(tabAntOpphSh5Aar)
 export(tabAntOpphShMnd)
@@ -42,7 +42,6 @@ export(tabBelegg)
 export(tabLiggetider)
 export(tabSkjemaTilknyttet)
 export(ui_nordicscir)
-export(ui_norscir)
 importFrom(lubridate,"%m-%")
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
