--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(NSFigGjsnGrVar)
 export(NSFigGjsnTid)
 export(NSFigKvalInd)
 export(NSFigPrePost)
+export(NSFigStabelAnt)
 export(NSPreprosesser)
 export(NSRegDataSQL)
 export(NSUtvalg)
