Div bugfix for PP-figurer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,9 @@ export(NSFigKvalInd)
 export(NSFigPrePost)
 export(NSFigStabelAnt)
 export(NSPreprosesser)
-export(NSUtvalg)
+export(NSRegDataSQL)
 export(NSUtvalgEnh)
+export(NSUtvalgGML)
 export(NSVarTilrettelegg)
 export(SorterOgNavngiTidsEnhet)
 export(TilLogiskeVar)
