--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: nordicscir
 Type: Package
 Title: R-pakke for å generere resultater fra NordicScir
-Version: 3.1.0
+Version: 3.1.1
+Date: 2024-03-08
 Authors@R: c(
      person(given = "Lena Ringstad",
            family = "Olsen",
