--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,44 @@
-version: '3.3'
+x-environment: &environment
+  DB_HOST: db
+  DB_USER: root
+  DB_PASS: root
+  FALK_APP_ID: 80
+  FALK_EXTENDED_USER_RIGHTS: "[{\"A\":80,\"R\":\"LC\",\"U\":1},{\"A\":80,\"R\":\"SC\",\"U\":2},{\"A\":81,\"R\":\"LC\",\"U\":2}]"
+  USERORGID: "pilot"
+  SHINYPROXY_USERNAME: test@tester.no
+  SHINYPROXY_USERGROUPS: "pilot"
+
 
 services:
-   db:
-     image: mysql:5.7
-     command: --innodb-log-file-size=500M --innodb_strict_mode=0
-     restart: "no"
-     environment:
-       MYSQL_ROOT_PASSWORD: root
-     volumes:
-       - D:/db:/var/lib/mysql
+  db:
+    image: mysql:8
+    command: --innodb-log-file-size=500M --innodb_strict_mode=0
+    restart: "no"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+
+  app:
+    image: rapporteket/nordicscir:main
+    ports:
+      - 3838:3838
+    environment:
+      << : *environment
 
   dev:
     depends_on:
       - db
-    image: rapporteket/nordicscir-dev:nightly
-      volumes:
-       - C:\Users\Lena Ringstad Olsen\.ssh:/home/rstudio/speiler_.ssh
-       - ~/.gitconfig:/home/rstudio/.gitconfig
-       - D:/mydata:/home/rstudio/mydata
-       - C:/ResultattjenesteGIT/korona:/home/rstudio/korona
-       - C:/ResultattjenesteGIT/rygg:/home/rstudio/rygg
-       - C:/ResultattjenesteGIT/nordicscir:/home/rstudio/nordicscir
-       - C:/ResultattjenesteGIT/intensiv:/home/rstudio/intensiv
-       - C:/ResultattjenesteGIT/intensivberedskap:/home/rstudio/intensivberedskap
-
+    image: rapporteket/pilot-dev:main
+    volumes:
+      - ~/.ssh:/home/rstudio/.ssh
+      - ~/.gitconfig:/home/rstudio/.gitconfig
+      - .:/home/rstudio/nordicscir
+      - ../rapbase/.:/home/rstudio/rapbase
     ports:
       - "8787:8787"
-      - "3838:3838"
-    dns:
-      - 8.8.8.8
     restart: "no"
     environment:
-      PASSWORD: password
-      DB_HOST: db
-      DB_USER: root
-      DB_PASS: root
+      << : *environment
+      DISABLE_AUTH: "true"
 
   adminer:
     depends_on:
