--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,25 @@
+x-db: &db
+  image: mysql:8
+  restart: "no"
+  environment:
+    MYSQL_ROOT_PASSWORD: root
+    MYSQL_DATABASE: db
+    MYSQL_USER: user
+    MYSQL_PASSWORD: password
+#  volumes:
+#    - ./inst:/docker-entrypoint-initdb.d
+
+
 x-environment: &environment
-  DB_HOST: db
-  DB_USER: root
-  DB_PASS: root
+  MYSQL_DB: db
+  MYSQL_HOST: db_data
+  MYSQL_HOST_LOG: db_log
+  MYSQL_HOST_AUTOREPORT: db_autoreport
+  MYSQL_USERNAME: user
+  MYSQL_PASSWORD: password
+  MYSQL_PORT_DATA: 3331
+  MYSQL_PORT_LOG: 3332
+  MYSQL_PORT_AUTOREPORT: 3333
   FALK_APP_ID: 80
   FALK_EXTENDED_USER_RIGHTS: "[{\"A\":80,\"R\":\"LC\",\"U\":1},{\"A\":80,\"R\":\"SC\",\"U\":2},{\"A\":81,\"R\":\"LC\",\"U\":2}]"
   USERORGID: "pilot"
@@ -11,16 +29,26 @@ x-environment: &environment
 
 
 services:
-  db:
-    image: mysql:8
-    command: --innodb-log-file-size=500M --innodb_strict_mode=0
-    restart: "no"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
+  db_data:
+    <<: *db
+    ports:
+      - 3331:3306
+  db_log:
+    <<: *db
+    ports:
+      - 3332:3306
+    volumes:
+      - ./inst/db/log:/docker-entrypoint-initdb.d
+  db_autoreport:
+    <<: *db
+    ports:
+      - 3333:3306
 
   app:
     depends_on:
-      - db
+      - db_data
+      - db_log
+      - db_autoreport
     image: rapporteket/nordicscir:nhn
     ports:
       - 3838:3838
@@ -32,7 +60,9 @@ services:
 
   dev:
     depends_on:
-      - db
+      - db_data
+      - db_log
+      - db_autoreport
     image: rapporteket/pilot-dev:main
     volumes:
       - ~/.ssh:/home/rstudio/.ssh
@@ -49,7 +79,9 @@ services:
 
   adminer:
     depends_on:
-      - db
+      - db_data
+      - db_log
+      - db_autoreport
     image: adminer
     restart: "no"
     environment:
