--- a/data-raw/config/rapbaseConfig.yml
+++ b/data-raw/config/rapbaseConfig.yml
@@ -13,7 +13,7 @@ r :
     archiveDir: logArchive
     eolDays: 730
     target: db
-    key: raplogTest
+    key: raplog
 
   # Automated report data
   autoReport:
