--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,8 @@
-x-db: &db
-  image: mysql:8
-  restart: "no"
-  environment:
-    MYSQL_ROOT_PASSWORD: root
-    MYSQL_DATABASE: db
-    MYSQL_USER: user
-    MYSQL_PASSWORD: password
-#  volumes:
-#    - ./inst:/docker-entrypoint-initdb.d
-
-
 x-environment: &environment
-  MYSQL_DB: db
-  MYSQL_HOST: db_data
-  MYSQL_HOST_LOG: db_log
-  MYSQL_HOST_AUTOREPORT: db_autoreport
+  LOGS_DB: db_log
+  NORDICSCIR_DB: db_data
+  AUTOREPORT_DB: db_autoreport
+  MYSQL_HOST: db
   MYSQL_USERNAME: user
   MYSQL_PASSWORD: password
   FALK_APP_ID: 80
@@ -26,26 +14,25 @@ x-environment: &environment
 
 
 services:
-  db_data:
-    <<: *db
+
+  db:
+    image: mysql:8
+    restart: "no"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    entrypoint:
+      sh -c "
+        echo 'CREATE DATABASE IF NOT EXISTS db_log; CREATE DATABASE IF NOT EXISTS db_autoreport; CREATE DATABASE IF NOT EXISTS db_data;' > /docker-entrypoint-initdb.d/init.sql;
+        /usr/local/bin/docker-entrypoint.sh  --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      "
     ports:
-      - 3331:3306
-  db_log:
-    <<: *db
-    ports:
-      - 3332:3306
-    volumes:
-      - ./inst/db/log:/docker-entrypoint-initdb.d
-  db_autoreport:
-    <<: *db
-    ports:
-      - 3333:3306
+      - 3306:3306 
 
   app:
     depends_on:
-      - db_data
-      - db_log
-      - db_autoreport
+      - db
     image: rapporteket/nordicscir:nhn
     ports:
       - 3838:3838
@@ -57,9 +44,7 @@ services:
 
   dev:
     depends_on:
-      - db_data
-      - db_log
-      - db_autoreport
+      - db
     image: rapporteket/pilot-dev:main
     volumes:
       - ~/.ssh:/home/rstudio/.ssh
@@ -76,9 +61,7 @@ services:
 
   adminer:
     depends_on:
-      - db_data
-      - db_log
-      - db_autoreport
+      - db
     image: adminer
     restart: "no"
     environment:
