--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ x-environment: &environment
   NORDICSCIR_DB: db_data
   AUTOREPORT_DB: db_autoreport
   MYSQL_HOST: db
-  MYSQL_USERNAME: user
-  MYSQL_PASSWORD: password
+  MYSQL_USERNAME: root
+  MYSQL_PASSWORD: root
   FALK_APP_ID: 80
   FALK_EXTENDED_USER_RIGHTS: "[{\"A\":80,\"R\":\"LC\",\"U\":1},{\"A\":80,\"R\":\"SC\",\"U\":2},{\"A\":81,\"R\":\"LC\",\"U\":2}]"
   USERORGID: "pilot"
@@ -22,9 +22,10 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: user
       MYSQL_PASSWORD: password
+    volumes:
+      - ./dev/db:/docker-entrypoint-initdb.d
     entrypoint:
       sh -c "
-        echo 'CREATE DATABASE IF NOT EXISTS db_log; CREATE DATABASE IF NOT EXISTS db_autoreport; CREATE DATABASE IF NOT EXISTS db_data;' > /docker-entrypoint-initdb.d/init.sql;
         /usr/local/bin/docker-entrypoint.sh  --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
       "
     ports:
