--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ x-environment: &environment
   NORDICSCIR_DB: db_data
   AUTOREPORT_DB: db_autoreport
   MYSQL_HOST: db
-  MYSQL_USERNAME: root
+  MYSQL_USER: root
   MYSQL_PASSWORD: root
   FALK_APP_ID: 80
   FALK_EXTENDED_USER_RIGHTS: "[{\"A\":80,\"R\":\"LC\",\"U\":1},{\"A\":80,\"R\":\"SC\",\"U\":2},{\"A\":81,\"R\":\"LC\",\"U\":2}]"
