Riktig navn på miljøvariabler i docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 x-environment: &environment
-  LOGS_DB: db_log
+  MYSQL_DB_LOG: db_log
   NORDICSCIR_DB: db_data
-  AUTOREPORT_DB: db_autoreport
+  MYSQL_DB_AUTOREPORT: db_autoreport
+  MYSQL_DB_DATA: db_data
   MYSQL_HOST: db
   MYSQL_USER: root
   MYSQL_PASSWORD: root
