--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,8 +36,7 @@ Imports:
     xtable
 Remotes: 
     Rapporteket/rapbase@*release,
-    Rapporteket/rapFigurer,
-    Rapporteket/raplog,
+    Rapporteket/rapFigurer
 Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
