--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,65 @@
-version: '3.3'
+x-environment: &environment
+  MYSQL_DB_LOG: db_log
+  NORDICSCIR_DB: db_data
+  MYSQL_DB_AUTOREPORT: db_autoreport
+  MYSQL_DB_DATA: db_data
+  MYSQL_HOST: db
+  MYSQL_USER: root
+  MYSQL_PASSWORD: root
+  FALK_APP_ID: 80
+  FALK_EXTENDED_USER_RIGHTS: "[{\"A\":80,\"R\":\"LC\",\"U\":1},{\"A\":80,\"R\":\"SC\",\"U\":2},{\"A\":81,\"R\":\"LC\",\"U\":2}]"
+  USERORGID: "pilot"
+  SHINYPROXY_USERNAME: test@tester.no
+  SHINYPROXY_USERGROUPS: "pilot"
+  R_RAP_INSTANCE: "QAC"
+
 
 services:
-   db:
-     image: mysql:5.7
-     command: --innodb-log-file-size=500M --innodb_strict_mode=0
-     restart: "no"
-     environment:
-       MYSQL_ROOT_PASSWORD: root
-     volumes:
-       - D:/db:/var/lib/mysql
+
+  db:
+    image: mysql:8
+    restart: "no"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+      - ./dev/db:/docker-entrypoint-initdb.d
+    entrypoint:
+      sh -c "
+        /usr/local/bin/docker-entrypoint.sh  --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      "
+    ports:
+      - 3306:3306 
+
+  app:
+    depends_on:
+      - db
+    image: rapporteket/nordicscir:nhn
+    ports:
+      - 3838:3838
+    volumes:
+      - ./data-raw/config:/app/R
+    environment:
+      R_RAP_CONFIG_PATH: /app/R
+      << : *environment
 
   dev:
     depends_on:
       - db
-    image: rapporteket/nordicscir-dev:nightly
-      volumes:
-       - C:\Users\Lena Ringstad Olsen\.ssh:/home/rstudio/speiler_.ssh
-       - ~/.gitconfig:/home/rstudio/.gitconfig
-       - D:/mydata:/home/rstudio/mydata
-       - C:/ResultattjenesteGIT/korona:/home/rstudio/korona
-       - C:/ResultattjenesteGIT/rygg:/home/rstudio/rygg
-       - C:/ResultattjenesteGIT/nordicscir:/home/rstudio/nordicscir
-       - C:/ResultattjenesteGIT/intensiv:/home/rstudio/intensiv
-       - C:/ResultattjenesteGIT/intensivberedskap:/home/rstudio/intensivberedskap
-
+    image: rapporteket/pilot-dev:main
+    volumes:
+      - ~/.ssh:/home/rstudio/.ssh
+      - ~/.gitconfig:/home/rstudio/.gitconfig
+      - .:/home/rstudio/nordicscir
+      - ../rapbase/.:/home/rstudio/rapbase
     ports:
       - "8787:8787"
-      - "3838:3838"
-    dns:
-      - 8.8.8.8
     restart: "no"
     environment:
-      PASSWORD: password
-      DB_HOST: db
-      DB_USER: root
-      DB_PASS: root
+      << : *environment
+      DISABLE_AUTH: "true"
+      R_RAP_CONFIG_PATH: /home/rstudio/nordicscir/data-raw/config
 
   adminer:
     depends_on:
