--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
   app:
     depends_on:
       - db
-    image: rapporteket/nordicscir:nhn
+    image: rapporteket/nordicscir:4.0.0
     ports:
       - 3838:3838
     volumes:
