--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ x-environment: &environment
   MYSQL_USER: root
   MYSQL_PASSWORD: root
   FALK_APP_ID: 80
-  FALK_EXTENDED_USER_RIGHTS: "[{\"A\":80,\"R\":\"LC\",\"U\":1},{\"A\":80,\"R\":\"SC\",\"U\":2},{\"A\":81,\"R\":\"LC\",\"U\":2}]"
+  FALK_EXTENDED_USER_RIGHTS: "[{\"A\":80,\"R\":\"LC\",\"U\":106896},{\"A\":80,\"R\":\"SC\",\"U\":105593},{\"A\":81,\"R\":\"LC\",\"U\":106896}]")
   USERORGID: "pilot"
   SHINYPROXY_USERNAME: test@tester.no
   SHINYPROXY_USERGROUPS: "pilot"
@@ -31,7 +31,7 @@ services:
         /usr/local/bin/docker-entrypoint.sh  --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
       "
     ports:
-      - 3306:3306 
+      - 3306:3306
 
   app:
     depends_on:
@@ -53,8 +53,6 @@ services:
       - ~/.gitconfig:/home/rstudio/.gitconfig
       - .:/home/rstudio/nordicscir
       - ../rapbase/.:/home/rstudio/rapbase
-      - /c/Users/Lena Ringstad Olsen/.ssh:/home/rstudio/speiler_.ssh
-      - /d/mydata:/home/rstudio/mydata
     ports:
       - "8787:8787"
     restart: "no"
