Redusert observe og lagt tilbake all funksjonalitet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,15 @@ export("%$%")
 export("%<>%")
 export("%>%")
 export("%m-%")
+export("')")
+export("'.HovedskjemaGUID)")
+export(",")
+export(",'.SkjemaGUID',")
 export(":=")
+export("=")
+export("UPPER(',koblSkjema")
+export("UPPER(',valgtSkjema")
+export("koblSkjema,')")
 export(.data)
 export(KobleMedHoved)
 export(NSFigAndelStabel)
@@ -16,10 +24,10 @@ export(NSFigKvalInd)
 export(NSFigPrePost)
 export(NSFigStabelAnt)
 export(NSPreprosesser)
-export(NSRegDataSQL)
 export(NSUtvalgEnh)
 export(NSUtvalgGML)
 export(NSVarTilrettelegg)
+export(ON)
 export(SorterOgNavngiTidsEnhet)
 export(TilLogiskeVar)
 export(abonnement)
