--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,7 @@ export("%$%")
 export("%<>%")
 export("%>%")
 export("%m-%")
-export("')")
-export("'.HovedskjemaGUID)")
-export(",")
-export(",'.SkjemaGUID',")
 export(":=")
-export("=")
-export("UPPER(',koblSkjema")
-export("UPPER(',valgtSkjema")
-export("koblSkjema,')")
 export(.data)
 export(KobleMedHoved)
 export(NSFigAndelStabel)
@@ -24,10 +16,10 @@ export(NSFigKvalInd)
 export(NSFigPrePost)
 export(NSFigStabelAnt)
 export(NSPreprosesser)
+export(NSRegDataSQL)
 export(NSUtvalgEnh)
 export(NSUtvalgGML)
 export(NSVarTilrettelegg)
-export(ON)
 export(SorterOgNavngiTidsEnhet)
 export(TilLogiskeVar)
 export(abonnement)
