--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
   app:
     depends_on:
       - db
-    image: rapporteket/nordicscir:4.0.2
+    image: rapporteket/nordicscir:latest
     ports:
       - 3838:3838
     volumes:
@@ -74,7 +74,7 @@ services:
   rapadm:
     depends_on:
       - db
-    image: rapporteket/rapadm:0.8.4
+    image: rapporteket/rapadm:latest
     restart: "no"
     environment:
       << : *environment
