--- a/docker-composeLena.yml
+++ b/docker-composeLena.yml
@@ -2,7 +2,7 @@ x-environment: &environment
   MYSQL_DB_LOG: db_log
   NORDICSCIR_DB: db_data
   MYSQL_DB_AUTOREPORT: db_autoreport
-  MYSQL_DB_DATA: db_data
+  MYSQL_DB_DATA: nordicscirreportdatastaging
   MYSQL_HOST: db
   MYSQL_USER: root
   MYSQL_PASSWORD: root
