--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(delTekst)
 export(finnRegData)
 export(getFakeData)
 export(getRealData)
+export(kjorApp)
 export(kjor_NSapper)
 export(lagTabNevrKlass)
 export(lagTabavFigAndeler)
@@ -34,6 +35,7 @@ export(lagTabavFigAndelerSh)
 export(lagTabavFigGjsnGrVar)
 export(processAllData)
 export(server_nordicscir)
+export(server_norscir)
 export(tabAntOpphPasSh5Aar)
 export(tabAntOpphSh5Aar)
 export(tabAntOpphShMnd)
@@ -42,6 +44,7 @@ export(tabBelegg)
 export(tabLiggetider)
 export(tabSkjemaTilknyttet)
 export(ui_nordicscir)
+export(ui_norscir)
 importFrom(lubridate,"%m-%")
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
