Tilpasset ny versjon av ekstraktor og begge appene i pakken (#62)
* Oppdatert tabellnavn ihht ny ekstraktor

* Endringer pga endrede skjemaguid

* Versjon til test

* descr

* Descr: Tatt med remotes i imports

* Oppdat versjon

* app_norscir flyttet inn i nordiscir-pakken

* test-endringer

* Slettet unødvendig fil

* roxygenize

---------

Co-authored-by: Lena Ringstad Olsen <lena.ringstad.olsen@helse-nord.no>
Co-authored-by: Arnfinn Hykkerud Steindal <arnfinn.hykkerud.steindal@helse-nord.no>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: nordicscir
 Type: Package
 Title: R-pakke for å generere resultater fra NordicScir
-Version: 4.0.13
-Date: 2024-01-14
+Version: 4.1.0
+Date: 2025-08-12
 Authors@R: c(
      person(given = "Lena Ringstad",
            family = "Olsen",
@@ -32,6 +32,8 @@ Imports:
     knitr,
     lubridate,
     magrittr,
+    rapbase,
+    rapFigurer,
     rlang,
     shiny,
     shinyalert,
