--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,14 +27,15 @@ export(delTekst)
 export(finnRegData)
 export(getFakeData)
 export(getRealData)
+export(kjorApp)
 export(kjor_NSapper)
 export(lagTabNevrKlass)
 export(lagTabavFigAndeler)
 export(lagTabavFigAndelerSh)
 export(lagTabavFigGjsnGrVar)
-export(lageTulleData)
 export(processAllData)
 export(server_nordicscir)
+export(server_norscir)
 export(tabAntOpphPasSh5Aar)
 export(tabAntOpphSh5Aar)
 export(tabAntOpphShMnd)
@@ -43,6 +44,7 @@ export(tabBelegg)
 export(tabLiggetider)
 export(tabSkjemaTilknyttet)
 export(ui_nordicscir)
+export(ui_norscir)
 importFrom(lubridate,"%m-%")
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
