Fixet betingede utvalg, Reg.oversikt

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ export(processAllData)
 export(server_nordicscir)
 export(server_norscir)
 export(tabAntOpphPasSh5Aar)
-export(tabAntOpphSh5Aar)
+export(tabAntOpphShAar)
 export(tabAntOpphShMnd)
 export(tabAntSkjema)
 export(tabBelegg)
