Ny tab med ant opphold per tidsenhet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(server_norscir)
 export(tabAntOpphPasSh5Aar)
 export(tabAntOpphShAar)
 export(tabAntOpphShMnd)
+export(tabAntOpphShTid)
 export(tabAntSkjema)
 export(tabBelegg)
 export(tabLiggetider)
