--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(.data)
 export(KobleMedHoved)
 export(NSFigAndelStabel)
 export(NSFigAndeler)
+export(NSFigAndelerGrVar)
 export(NSFigAndelerSh)
 export(NSFigGjsnGrVar)
 export(NSFigGjsnTid)
@@ -49,5 +50,6 @@ importFrom(lubridate,"%m-%")
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
+importFrom(rapFigurer,figtype)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
