--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: nordicscir
 Type: Package
 Title: R-pakke for å generere resultater fra NordicScir
 Version: 4.2.0
-Date: 2025-11-06
+Date: 2025-12-06
 Authors@R: c(
      person(given = "Lena Ringstad",
            family = "Olsen",
@@ -40,7 +40,7 @@ Imports:
     shinyjs,
     xtable
 Remotes:
-    Rapporteket/rapbase@main,
+    Rapporteket/rapbase@explicit_call,
     Rapporteket/rapFigurer
 Suggests:
     testthat (>= 3.0.0)
