--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: nordicscir
 Type: Package
 Title: R-pakke for å generere resultater fra NordicScir
-Version: 4.2.0
-Date: 2025-12-06
+Version: 4.3.0
+Date: 2025-12-16
 Authors@R: c(
      person(given = "Lena Ringstad",
            family = "Olsen",
@@ -40,7 +40,7 @@ Imports:
     shinyjs,
     xtable
 Remotes:
-    Rapporteket/rapbase@explicit_call,
+    Rapporteket/rapbase@main,
     Rapporteket/rapFigurer
 Suggests:
     testthat (>= 3.0.0)
